--- a/BulkyWeb/Areas/Admin/Views/Product/Delete.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Delete.cshtml
@@ -1,6 +1,6 @@
-@model Category
+@model Product
 
-<div class="card shadow border-0 mt-4">
+<div class="card shadow border-0 my-4">
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
@@ -14,12 +14,36 @@
             <div class="border p-3 mt-4">
                 <div asp-validation-summary="ModelOnly"></div>
                 <div class="form-floating py-2 col-12">
-                    <input asp-for="Name" class="form-control border-0 shadow" disabled />
-                    <label asp-for="Name" class="ms-2"></label>
+                    <input asp-for="Title" class="form-control border-0 shadow" disabled />
+                    <label asp-for="Title" class="ms-2"></label>
                 </div>
                 <div class="form-floating py-2 col-12">
-                    <input asp-for="DisplayOrder" class="form-control border-0 shadow" disabled />
-                    <label asp-for="DisplayOrder" class="ms-2"></label>
+                    <input asp-for="Description" class="form-control border-0 shadow" disabled />
+                    <label asp-for="Description" class="ms-2"></label>
+                </div>
+                <div class="form-floating py-2 col-12">
+                    <input asp-for="ISBN" class="form-control border-0 shadow" disabled />
+                    <label asp-for="ISBN" class="ms-2"></label>
+                </div>
+                <div class="form-floating py-2 col-12">
+                    <input asp-for="Author" class="form-control border-0 shadow" disabled />
+                    <label asp-for="Author" class="ms-2"></label>
+                </div>
+                <div class="form-floating py-2 col-12">
+                    <input asp-for="ListPrice" class="form-control border-0 shadow" disabled />
+                    <label asp-for="ListPrice" class="ms-2"></label>
+                </div>
+                <div class="form-floating py-2 col-12">
+                    <input asp-for="Price" class="form-control border-0 shadow" disabled />
+                    <label asp-for="Price" class="ms-2"></label>
+                </div>
+                <div class="form-floating py-2 col-12">
+                    <input asp-for="Price50" class="form-control border-0 shadow" disabled />
+                    <label asp-for="Price50" class="ms-2"></label>
+                </div>
+                <div class="form-floating py-2 col-12">
+                    <input asp-for="Price100" class="form-control border-0 shadow" disabled />
+                    <label asp-for="Price100" class="ms-2"></label>
                 </div>
                 <div class="row mt-3">
                     <div class="col-6 col-md-3">
